# twitch-badge-fetcher-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
